--- a/style.css
+++ b/style.css
@@ -17,15 +17,18 @@
     /* border: 1px solid red; */
     background-color: rgb(10, 1, 34);
     height: 120px;
-    
+
 }
 
 .top-bar {
     display: flex;
-    justify-content: space-between;  /* left & right alignment */
+    justify-content: space-between;
+    /* left & right alignment */
     align-items: center;
-    padding: 5px 20px;               /* spacing from left & right */
-    border-bottom: 1px solid gray;   /* optional border */
+    padding: 5px 20px;
+    /* spacing from left & right */
+    border-bottom: 1px solid gray;
+    /* optional border */
     color: white;
     /* background-color: #0a0825;       */
     font-size: 18px;
@@ -33,20 +36,20 @@
     /* margin-left: -30px; */
 }
 
-.text{
+.text {
     color: white;
-      gap: 30px;
+    gap: 30px;
     display: flex;
     margin-top: -20px;
 }
 
-.text p{
+.text p {
     /* text-align: end; */
     margin-right: 990px;
     font-size: 15px;
 }
 
-.text p{
+.text p {
     /* text-align: end;
     margin-left: -10px; */
 }
@@ -78,7 +81,7 @@
     justify-content: space-between;
     justify-content: center;
     /* border: 5px solid yellow; */
- 
+
 
 }
 
@@ -319,17 +322,171 @@
     color: white;
 }
 
-.search-bar .car p{
+.search-bar .car p {
     margin-top: 10px;
     font-size: 20px;
 }
 
-.search-bar .cities  p{
+.search-bar .cities p {
     margin-top: 10px;
-     font-size: 20px;
+    font-size: 20px;
 }
 
-.search-bar .range  p{
+.search-bar .range p {
     margin-top: 10px;
-     font-size: 20px;
+    font-size: 20px;
+}
+
+#sell-car {
+    color: black;
+    margin-top: 500px;
+    text-align: center;
+}
+
+.container-sell-car {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 40px;
+    padding: 30px;
+    border: 1px solid gray;
+    max-width: 1000px;
+    margin: 40px auto;
+    flex-wrap: wrap;
+    /* for responsive behavior */
+    /* border: 3px solid red; */
+}
+
+.right-box {
+    margin-right: auto;
+}
+
+.left-box,
+.right-box {
+    width: 320px;
+    /* border: 3px solid red; */
+    padding: 20px;
+}
+
+.left-box h2,
+.right-box h2 {
+    color: navy;
+    font-size: 30px;
+    font-weight: bold;
+}
+
+
+.left-box ul,
+.right-box ul {
+    list-style: none;
+    font-size: 18px;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+.left-box li,
+.right-box li {
+    margin-bottom: 5px;
+}
+
+
+.btn-red,
+.btn-blue {
+    margin-top: 5px;
+    height: 50px;
+    width: 170px;
+    border-radius: 5px;
+    border: none;
+    font-size: 15px;
+    font-weight: bold;
+    color: white;
+}
+
+.btn-red {
+    background-color: red;
+}
+
+.btn-blue {
+    background-color: blue;
+}
+
+.or-box {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.btn-red:hover {
+    background-color: maroon;
+}
+
+.btn-blue:hover {
+    background-color: navy;
+}
+
+
+.browse-used-car {
+    /* border: 3px solid red; */
+    height: 500px;
+    margin: 40px auto;
+    background-color: rgb(238, 238, 238);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.browse-content {
+    /* border: 2px solid yellow; */
+    width: 1000px;
+    height: 400px;
+}
+
+.browse {
+    color: #434343;
+
+}
+
+.browse-nav ul {
+    list-style: none;
+    margin-top: 20px;
+}
+
+.browse-nav ul li {
+    display: inline;
+    padding: 20px;
+    margin-left: -20px;
+    font-size: 25px;
+    color: #434343;
+
+}
+
+.browse-nav ul li:hover {
+    color: blue;
+    cursor: pointer;
+}
+.car-category-section{
+    margin-top: 30px;
+    padding: 20px;
+}
+.car-grid{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    margin-left: 20px;
+    gap: 40px;
+}
+.car-card{
+    background-color: white;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 0 5px pink;
+}
+
+.car-card img{
+    width: 80px;
+    margin-bottom: 10px;
+}
+
+.car-card:hover{
+    box-shadow: 0 0 5px purple;
 }
