--- a/style.css
+++ b/style.css
@@ -490,3 +490,167 @@
 .car-card:hover{
     box-shadow: 0 0 5px purple;
 }
+
+
+/* OFERING SECTION */
+
+.pak{
+    margin-left: 180px;
+    margin-bottom: -20px;
+}
+
+.offering-section{
+    /* border: 3px solid red; */
+    display: grid;
+    grid-template-columns: repeat(2 , 1fr);
+    max-width: 1000px;
+    margin: 40px auto;
+    gap: 20px;
+}
+.ofering-card{
+    border: 1px solid gray;
+    display: flex;
+    border-radius: 3px;
+    height: 100px;
+}
+
+.ofering-card:hover{
+    box-shadow: 0 0 5px gray;
+    cursor: pointer;
+}
+
+.ofering-card img{
+    margin-left: 5px;
+    width: 150px;
+    gap: 10px;
+}
+.section-info{
+    /* border: 3px solid green; */
+    margin-left: 30px;
+    margin-top: 20px;
+
+}
+
+.section-info h1{
+    font-size: 25px;
+    color: navy;
+}
+
+.section-info p{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.section-info h1:hover{
+    color: blue;
+}
+
+.manage-section{
+    background-color: rgb(233, 232, 232);
+    /* border: 3px solid red; */
+    height: 300px;
+    display: grid;
+    grid-template-columns: repeat(4 , 1fr);
+}
+
+.manage-card{
+    /* border: 3px solid yellow; */
+    /* margin-top: 60px ; */
+    position: relative;
+    margin: 60px auto;
+    
+}
+#manage{
+    background-color: maroon;
+    border: none;
+    height: 25px;
+    width: 75px;
+    color: white;
+    border-radius: 3px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+.manage-card img{
+    width: 200px;
+    border-radius: 2px;
+}
+
+.text-info{
+    /* border: 3px solid green; */
+    background: white;
+    height: 70px;
+    margin-top: -10px;
+    padding: 5px;
+    
+
+}
+.text-info h1{
+    font-size: 20px;
+    color: navy;
+}
+
+.manage{
+    margin-bottom: -50px;
+    margin-left: 70px;
+}
+
+.link{
+    margin-bottom: -30px;
+    margin-left: 1020px;
+    color: blue;
+}
+
+.text-info h6{
+    font-size: 15px;
+    color: #3ecf52;
+}
+
+.text-info p{
+    color: rgb(158, 157, 157);
+}
+
+
+/* Feature Section */
+
+.feature-section{
+   margin-top: 80px;
+    border: 3px solid red;
+    height: 300px;
+    display: grid;
+    grid-template-columns: repeat(4 , 1fr);
+     padding: 0 70px;
+     margin-top: 0;   
+}
+
+.feature-card{
+    /* border: 3px solid yellow; */
+    /* margin-top: 60px ; */
+    position: relative;
+    margin: 60px auto;
+}
+
+.feature-card img{
+    width: 200px;
+    border-radius: 2px;
+}
+
+.feature-header {
+    border: 3px solid green;
+  display: flex;                 
+  justify-content: space-between; 
+  align-items: center;
+  padding: 0 70px;                
+  margin-bottom: 20px;
+ 
+}
+
+.feature-title {
+  margin: 0;
+}
+
+.fea-link {
+  color: blue;
+  text-decoration: none;
+  font-size: 14px;
+}
